--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "HelloWorld",
+	"name": "TimeTracker",
 	"description": "plugin tutorial",
 	"dependencies": {
 		"browserify": "^14.4.0",
