--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
 		"flatpickr": "^3.0.7",
 		"gem": "^2.4.2",
 		"proto": "^1.0.19",
-		"raw-loader": "^0.5.1"
+		"raw-loader": "^0.5.1",
+		"url-loader": "^0.6.2"
 	}
 }
